--- a/templates/views/Weather.hbs
+++ b/templates/views/Weather.hbs
@@ -35,7 +35,9 @@
         </div>
     </div>
     <!-- footer code -->
-    {{>footer}}
+    <div style="position: absolute;bottom: 0px; width:100%">
+      {{>footer}}
+    </div>
 
     <script src="js/main.js"></script>
    
