--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,8 +12,8 @@
                 <div class="row">
                     <!-- left side div -->
                     <div class="col-md-6 col-12 main_header_left">
-                          <p>Welcome to weather app</p>
-                          <h1>Get The Latest <span class="text_clr"> Weather </span> Info Of Your City</h1>
+                          <p>Welcome to Weather app</p>
+                          <h1>Get Latest <span class="text_clr"> Weather </span> Updates Of Your City</h1>
                           <a href="/weather"> <button>Check now</button></a>
                     </div>
     <!-- right side div -->
