--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,11 @@
 
 }
 
+.carousel-item{
+    border: 4px solid rgb(64, 221, 255);
+    box-shadow: rgb(64 221 255) 0px 0px 12px;
+}
+
 :root{
     --main-bg: #1e272e;
     --main-colour : red;
@@ -29,6 +34,7 @@ html{
 
 .main_menu {
     background-color: var(--main-bg);
+    
 }
 
 .navbar{
@@ -70,6 +76,14 @@ html{
     }
 }
 
+.main_header{
+    
+    background: linear-gradient(rgb(124, 127, 255) 0%, rgb(64, 221, 255) 100%);
+    border: 4px solid rgb(64, 221, 255);
+    transition: all 0.4s cubic-bezier(0.8, -1, 0.2, 1.5) 0s;
+    -webkit-font-smoothing: antialiased;
+  
+}
 .main_header_left{
     height: 70rem;
     display: flex;
